# modules/core/src/main/scala/maweituo/http/dto.scala
@@ -166,3 +166,7 @@ object UploadImageRequestDto:
           }
       )
     }
+
+final case class AllTagsResponse(tags: List[AdTag]) derives Codec.AsObject
+
+final case class TagAdsResponse(tag: AdTag, adIds: List[AdId]) derives Codec.AsObject
