# modules/core/src/main/scala/maweituo/http/routes/TagRoutes.scala
@@ -11,14 +11,16 @@ import org.http4s.HttpRoutes
 import org.http4s.circe.CirceEntityEncoder.*
 import org.http4s.circe.JsonDecoder
 import org.http4s.dsl.Http4sDsl
+import maweituo.http.dto.AllTagsResponse
+import maweituo.http.dto.TagAdsResponse
 
 final case class TagRoutes[F[_]: MonadThrow: JsonDecoder](tags: AdTagService[F])
     extends Http4sDsl[F] with PublicRoutes[F]:
 
   override val routes = HttpRoutes.of[F] {
     case GET -> Root / "tags" =>
-      tags.all.flatMap(Ok(_))
+      tags.all.map(AllTagsResponse.apply).flatMap(Ok(_))
 
     case req @ GET -> Root / "tags" / TagVar(tag) / "ads" =>
-      tags.find(tag).flatMap(Ok(_))
+      tags.find(tag).map(TagAdsResponse(tag, _)).flatMap(Ok(_))
   }
